# ChangeLog for app-admin/chkrootkit
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/chkrootkit/Attic/ChangeLog,v 1.20 2004/02/29 22:45:09 pyrania Exp $

  29 Feb 2004; Markus Nigbur <pyrania@gentoo.org> chkrootkit-0.42b.ebuild:
  Stable on x86

  08 Feb 2004; Dylan Carlson <absinthe@gentoo.org> chkrootkit-0.42b.ebuild:
  added amd64 keyword.

  04 Jan 2004; Jason Wever <weeve@gentoo.org> chkrootkit-0.37.ebuild,
  chkrootkit-0.39a.ebuild, chkrootkit-0.41-r1.ebuild, chkrootkit-0.42b.ebuild:
  Marked 0.41-r1 stable on sparc and updated copyright info in all ebuilds.

  24 Nov 2003; Seemant Kulleen <seemant@gentoo.org> chkrootkit-0.42b.ebuild:
  coreutils fix -- head -1 to head -n 1 syntax

  16 Oct 2003; Aron Griffis <agriffis@gentoo.org> chkrootkit-0.42b.ebuild:
  Stable on alpha

  14 Oct 2003; Chuck Short <zul@gentoo.org> chkrootkit-0.42b.ebuild:
  Added ~ia64 to keywords.

*chkrootkit-0.42b (06 Oct 2003)

  06 Oct 2003; Martin Holzer <mholzer@gentoo.org> chkrootkit-0.42b.ebuild,
  files/chkrootkit-0.42b-gentoo.diff:
  Version bumped. Closes #30368

  03 Oct 2003; Aron Griffis <agriffis@gentoo.org> chkrootkit-0.41-r1.ebuild:
  Stable on alpha

*chkrootkit-0.41-r1 (18 Jul 2003)

  18 Jul 2003; Martin Holzer <mholzer@gentoo.org> chkrootkit-0.41-r1.ebuild,
  chkrootkit-0.41.ebuild, files/chkrootkit-0.41-gentoo.diff:
  little bugfix.

*chkrootkit-0.41 (16 Jul 2003)

  16 Jul 2003; Martin Holzer <mholzer@gentoo.org> chkrootkit-0.41.ebuild:
  Version bumped. Ebuild ssubmitted by Daniel Seyffer <gentoo-bugs@seyffer.de>
  in #24313.

*chkrootkit-0.39a (27 Feb 2003)

  27 Feb 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump. Found by Daniel Seyffer <gentoo-bugs@seyffer.de> in #15743.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*chkrootkit-0.37 (18 Sept 2002)
