@@ -2,7 +2,8 @@ MD5 97e54657db71949d29dc2f80f6ce2f37 chkrootkit-0.42b.ebuild 902
 MD5 16d965874a6b20f2b2319d277a6b60c1 chkrootkit-0.41-r1.ebuild 842
 MD5 c3f37acaf865b07bbc5f1914bb323adb chkrootkit-0.39a.ebuild 751
 MD5 b11737ecead57313edc4fcd89b9b67f9 chkrootkit-0.37.ebuild 732
-MD5 a07a313c44bdab9063bf6bfcd09a8c35 ChangeLog 2724
+MD5 f8cb219dec8f208b248642bb63514fd8 chkrootkit-0.43.ebuild 904
+MD5 3983160131c353a80bcf2b5c2dfdba0f ChangeLog 2863
 MD5 eb3187ff68ea9e3a781396eef5c19861 files/digest-chkrootkit-0.39a 67
 MD5 be7c7597652c846de193642182e3d69e files/digest-chkrootkit-0.42b 67
 MD5 08a62e6267f83410bc08ecb9cb262b02 files/digest-chkrootkit-0.41-r1 66
@@ -11,3 +12,4 @@ MD5 e9f2cc0eace779d1cad291deb9d9c7e1 files/chkrootkit-0.39a-gentoo.diff 28218
 MD5 4a7462549213c3ef88c11df667b2eeda files/chkrootkit-0.41-gentoo.diff 30253
 MD5 3259dda202b238de8bc2fb5b23a298c6 files/chkrootkit-0.42b-gentoo.diff 30932
 MD5 7cf45be07aafbbaa3252ce9ece31d5b6 files/digest-chkrootkit-0.37 66
+MD5 e403f736d82cbf43e0780a5bb62993cb files/digest-chkrootkit-0.43 66
