@@ -1,0 +1,1 @@
+MD5 08646b9bf3a9dc45c25a40946962a839 chkrootkit-0.43.tar.gz 33355
